bevy_elf_macros/tests/ui/pass/simple_struct.rs
use bevy_elf_macros::FromDef;

#[derive(FromDef)]
#[allow(unused)]
struct Foo {
    a: usize,
    b: String,
}

fn main() {}
